# nimbasms-cli

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
scripts/: build.bat  build.sh  install.ps1  install.sh  release.sh
src/: cli.py
src/commands/: accounts.py  contacts.py  extensions.py  groups.py  messages.py  sendernames.py  verifications.py
src/config/: install.sh  settings.py
src/core/: api.py  types.py  utils.py
tests/: test_api.py  test_api_v2.py  test_cli.py  test_comands_contacts.py  test_commands_accounts.py  test_commands_extensions.py  test_commands_groups.py  test_commands_messages.py  test_commands_sendernames.py  test_commands_verifications.py  test_settings.py
